Fix whitespace

--- a/index.css
+++ b/index.css
@@ -85,9 +85,6 @@ table
   { border-collapse: collapse; }
 
 /* accessibility.css */
-[aria-busy=true]
-  { cursor: progress }
-
 [aria-controls]
   { cursor: pointer }
 
